konpu-macros/tests/ui/fail_ignore_bad_reason.rs
#[konpu::ignore(reason = "??")]
fn ignore_bad_reason() {}